cluster/gitops/certificates/approver-policy/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: approver-policy
specs:
  - description: approver-policy
    endpointSelector:
      matchLabels:
        app.kubernetes.io/instance: approver-policy
    ingress:
      - fromEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: monitoring
              endpoints.netpols.home.arpa/metrics-scraper: "true"
        toPorts:
          - ports:
              - port: metrics
                protocol: TCP
      - fromEntities:
          - kube-apiserver
        toPorts:
          - ports:
              - port: webhook
                protocol: TCP
      - fromEntities:
          - host
        toPorts:
          - ports:
              - port: healthcheck
                protocol: TCP
    egress:
      - toEntities:
          - kube-apiserver
        toPorts:
          - ports:
              - port: "6443"
                protocol: TCP
